Bug 1837647 - limit GetDpiForMonitor to return default value to fix Win7 tests. r=dbaker,webrtc-reviewers

Upstream commit 60795e8c7a added a call to ::GetDpiForMonitor which is only
supported in Win8 and newer.  This is causing perma-orange on try, so we'll
disable it for now and fix properly in Bug 1837667.

Differential Revision: https://phabricator.services.mozilla.com/D180460